0.28
    Add Widget roles
    Major refactor to support result classes
    Reformatting source to more Perl standard
    Fix bug generating CSS classes in Renderer::Simple (mazpe)
    Fix POD example in ::Intro (mazpe)

0.27006 Mon Aug 17, 2009
    Add ability to set params class and arguments

0.27005 Wed Aug 12, 2009
    DateTime::Format::Strptime dep again

0.27004 Tues Aug 11, 2009
    Date inherits from Text. Fix loading compound fields from related.
    Call load_options for forms with no init_obj & params

0.27003 Sat Aug 2, 2009
    Indexing failure missing version in Date

0.27002 Sat Aug 2, 2009
    Fix missing dependency on DateTime::Format::Strptime
    Doc tweaks

0.27001 Fri July 31, 2009
    Doc fixes, fix Date field.

0.27 Sat July 25, 2009
    Split HTML::FormHandler::Model::DBIC into separate distribution
    Add 'inactive' flag. Cleanup Makefile.PL. 'size' split into 'size' and
    'maxlength'. 'min_length' renamed to 'minlength'. Add Catalyst pod.
    'html_name' used for field 'id'. Fix DateMDY field.

0.26 Tues June 23, 2009
    Fix dependency test failures on UNIVERSAL::require and version

0.25 Sat June 20, 2009
    Add dependency for DateTime::Format::SQLite

0.24 Sat June 20, 2009 
    Refactor validation processing for api consistency
    Skip empty undef array elements. Update Password and PrimaryKey fields.
    Fix bugs: calling validate_ method, recognizing errors in repeatable fields,
    handling empty repeatable elements,
    incorrect cloning in Repeatable, rendering fixes/updates.

0.23 Fri May 22, 2009
    Refactor HTH to use only 'process'. Deprecate 'validate' and 'update'
    Add field_list array, deprecate other usages. 
    Clean up documentation
    Add Repeatable field to support has_many relationships

0.22 Fri May 1, 2009, 17:00
    Removed development only test from distribution
    Expanded apply documentation.

0.21 Thu Apr 30, 2009, 20:00
    Removed podcoverage, added skip to generator.t test, added