@@ -213,7 +213,7 @@ sub render_field_struct {
         $output .= '<legend>' . $field->label . '</legend>';
     }
     $output .= $rendered_field;
-    $output .= qq{\n<span class="error_message">$_</span>} for $field->errors;
+    $output .= qq{\n<span class="error_message">$_</span>} for $field->all_errors;
     if ( $l_type eq 'legend' ) {
         $output .= '</fieldset>';
     }
